--- a/styles/style.css
+++ b/styles/style.css
@@ -21,19 +21,14 @@ body {
 
 .container {
   width: 800px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-content: flex-start;
+  height: 600px;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  gap: 3px 3px;
 }
 
 .boxes {
-  width: 170px;
-  height: 170px;
-  background: #53afee;
-  margin: 2px;
   background-image: url("/images/valorant.png");
   background-position: center 0;
   background-size: auto 100%;
@@ -60,15 +55,4 @@ body {
   background-position: center;
   background-size: 100% 100%;
   transform: rotatey(180deg);
-}
-
-@media screen and (max-width: 617px) {
-  .container {
-    width: 100%;
-  }
-  .boxes {
-    width: 120px;
-    height: 170px;
-    background-size: cover 100%;
-  }
 }
