--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital@1&family=Source+Code+Pro&display=swap");
 *,
 *::before,
 *::after {
@@ -8,20 +10,33 @@
 
 body {
   min-height: 100vh;
+  font-family: "Poppins", sans-serif;
   height: 100vh;
+  background: linear-gradient(-20deg, #3f2b96a9 0%, #a8c1ffa2 100%);
+  perspective: 1000px;
+  overflow: hidden;
+}
+
+.section {
+  width: 100vw;
+  height: 90vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: row;
-  background: #200400;
-  background: #bad9d7;
-  background: linear-gradient(-20deg, #3f2b96a9 0%, #a8c1ffa2 100%);
-  perspective: 1000px;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.section > h1 {
+  font-size: 3.5rem;
+  margin-left: -50px;
+  color: #0e3970;
 }
 
 .container {
   width: 800px;
-  height: 600px;
+  height: 552px;
+  margin-left: -50px;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: repeat(4, 1fr);
@@ -30,7 +45,7 @@ body {
 
 .boxes {
   background-image: url("/images/valorant.png");
-  background-position: center 0;
+  background-position: bottom -20px center;
   background-size: auto 100%;
   background-attachment: fixed;
   transition: 0.3s ease-in-out;
@@ -55,4 +70,122 @@ body {
   background-position: center;
   background-size: 100% 100%;
   transform: rotatey(180deg);
+}
+
+.score {
+  position: absolute;
+  font-family: "Rubik", sans-serif;
+  font-family: "Source Code Pro", monospace;
+  top: 120px;
+  right: 50px;
+  color: #0f5563;
+  font-size: 2.7rem;
+  font-weight: bolder;
+  width: 260px;
+}
+
+.score p:last-child {
+  text-align: center;
+}
+
+.moves {
+  position: absolute;
+  bottom: 150px;
+  left: 100px;
+  font-size: 2rem;
+  color: #420808;
+  font-family: "Rubik", sans-serif;
+  font-family: "Source Code Pro", monospace;
+  font-weight: bolder;
+  width: 220px;
+  width: 110px;
+  text-align: center;
+}
+
+.moves p:last-child {
+  text-align: center;
+}
+
+.time {
+  color: #4b0a0a;
+  position: absolute;
+  bottom: 160px;
+  right: 60px;
+  font-size: 2rem;
+  font-family: "Rubik", sans-serif;
+  font-family: "Source Code Pro", monospace;
+  font-weight: bolder;
+}
+
+.time p:last-child {
+  text-align: center;
+}
+
+.gameover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.message {
+  position: absolute;
+  width: 400px;
+  height: 220px;
+  border-radius: 10px;
+  background-color: #0f5563;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  justify-content: space-around;
+  font-size: 2.5rem;
+  background-color: #564aa5;
+  border: 2px solid #2d2d2d;
+  color: white;
+}
+
+.message p:first-child {
+  font-size: 3rem;
+  margin-top: -10px;
+}
+
+.message p:nth-child(2) {
+  margin-top: -30px;
+}
+
+.message button {
+  display: inline-block;
+  border: 0;
+  width: 120px;
+  border-radius: 6px;
+  height: 35px;
+  font-size: 1.5rem;
+  background-color: #fe6262;
+  background-color: #f3643f;
+  color: white;
+  margin-top: -10px;
+  font-weight: 500;
+}
+
+.gameover .background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(10px);
+}
+
+.visible {
+  transform: scale(0);
+}
+
+.message {
+  transform: translateY(-500px) scale(0);
+  opacity: 0;
+  transition: 0.3s ease-in-out;
 }
