--- a/styles/style.css
+++ b/styles/style.css
@@ -199,6 +199,7 @@ body {
   .container {
     width: 680px;
     height: 552px;
+    margin-bottom: -60px;
   }
   .score {
     top: 120px;
@@ -208,13 +209,13 @@ body {
   }
   .time {
     color: #4b0a0a;
-    bottom: 160px;
+    bottom: 100px;
     right: 10px;
     font-size: 1.8rem;
   }
   .moves {
     position: absolute;
-    bottom: 150px;
+    bottom: 100px;
     left: 10px;
     font-size: 1.8rem;
   }
