--- a/style.scss
+++ b/style.scss
@@ -217,25 +217,26 @@ body {
   }
   .section > h1 {
     font-size: 2.5rem;
-    margin-top: -20px;
+    margin: 0 auto;
+    margin-top: -25px;
     color: #0e3970;
   }
   .score {
-    top: 100px;
+    top: 90px;
     right: 5px;
-    width: 200px;
-    font-size: 1.8rem;
+    width: 120px;
+    font-size: 1.2rem;
   }
   .time {
     color: #4b0a0a;
     bottom: 10px;
     right: 5px;
-    font-size: 1.8rem;
+    font-size: 1.1rem;
   }
   .moves {
     position: absolute;
     bottom: 10px;
     left: 5px;
-    font-size: 1.8rem;
+    font-size: 1.1rem;
   }
 }
