--- a/style.scss
+++ b/style.scss
@@ -56,6 +56,7 @@ body {
 .boxes {
   transform-style: preserve-3d;
   position: relative;
+  cursor: pointer;
 }
 .boxes > * {
   width: 100%;
@@ -63,6 +64,7 @@ body {
   color: white;
   font-size: 1rem;
   position: absolute;
+  cursor: pointer;
 }
 .boxes .back {
   // background:red;
