--- a/style.scss
+++ b/style.scss
@@ -73,6 +73,7 @@ body {
   background-position: center;
   background-size: 100% 100%;
   transform: rotatey(180deg);
+  cursor: pointer;
 }
 .score {
   position: absolute;
