--- a/styles/style.css
+++ b/styles/style.css
@@ -72,6 +72,7 @@ body {
   background-position: center;
   background-size: 100% 100%;
   transform: rotatey(180deg);
+  cursor: pointer;
 }
 
 .score {
