--- a/style.scss
+++ b/style.scss
@@ -167,6 +167,7 @@ body {
   //background-color: #2d2d2d;
   //opacity: 0.8;
   backdrop-filter: blur(7px) grayscale(0.1);
+  transition: 0.2s ease-in-out;
 }
 .visible {
   transform: scale(0);
