--- a/styles/style.css
+++ b/styles/style.css
@@ -183,6 +183,7 @@ body {
   width: 100%;
   height: 100%;
   backdrop-filter: blur(7px) grayscale(0.1);
+  transition: 0.2s ease-in-out;
 }
 
 .visible {
