--- a/style.scss
+++ b/style.scss
@@ -240,4 +240,26 @@ body {
     left: 5px;
     font-size: 1.1rem;
   }
+  .message {
+    position: absolute;
+    width: 90%;
+    height: 220px;
+  }
+  p:first-child {
+    font-size: 1.5rem;
+    margin-top: -10px;
+  }
+  p:nth-child(2) {
+    margin-top: -30px;
+  }
+  button {
+    width: 120px;
+    font-size: 1.3rem;
+    margin-top: -10px;
+    font-weight: 500;
+  }
+  button:hover {
+    transform: scale(1.02);
+    font-size: 1.31rem;
+  }
 }
