--- a/styles/style.css
+++ b/styles/style.css
@@ -93,7 +93,6 @@ body {
   left: 100px;
   font-size: 2rem;
   color: #420808;
-  font-family: "Rubik", sans-serif;
   font-family: "Source Code Pro", monospace;
   font-weight: bolder;
   width: 220px;
@@ -111,7 +110,6 @@ body {
   bottom: 160px;
   right: 60px;
   font-size: 2rem;
-  font-family: "Rubik", sans-serif;
   font-family: "Source Code Pro", monospace;
   font-weight: bolder;
 }
@@ -280,4 +278,8 @@ body {
     transform: scale(1.02);
     font-size: 1.31rem;
   }
+}
+
+.message > p > span {
+  font-family: "Source Code Pro", monospace;
 }
