--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,8 @@
 *::after {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -11,18 +12,29 @@ body {
   font-family: "Poppins", sans-serif;
   height: 100vh;
   background: linear-gradient(-20deg, #3f2b96a9 0%, #a8c1ffa2 100%);
-  perspective: 1000px;
+  -webkit-perspective: 1000px;
+          perspective: 1000px;
   overflow: hidden;
 }
 
 .section {
   width: 100vw;
   height: 90vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .section > h1 {
@@ -35,23 +47,28 @@ body {
   width: 800px;
   height: 552px;
   margin-left: -50px;
+  display: -ms-grid;
   display: grid;
-  grid-template-rows: repeat(3, 1fr);
-  grid-template-columns: repeat(4, 1fr);
+  /* -ms-grid-rows: (1fr)[3]; */
+      grid-template-rows: repeat(3, 1fr);
+  /* -ms-grid-columns: (1fr)[4]; */
+      grid-template-columns: repeat(4, 1fr);
   gap: 3px 3px;
 }
 
 .boxes {
+  background-position: center center;
   background-image: url("/images/valorant.png");
-  background-position: bottom -20px center;
   background-size: auto 100%;
+  background-size: auto 100%;
+  background-repeat: no-repeat;
   background-attachment: fixed;
   -webkit-background-attachment: fixed;
+  -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
-}
-
-.boxes {
-  transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  cursor: pointer;
 }
 
 .boxes > * {
@@ -60,7 +77,8 @@ body {
   color: white;
   font-size: 1rem;
   position: absolute;
-  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
 }
 
 .boxes .back {
@@ -68,7 +86,8 @@ body {
   background-image: url("/images/killjoy_edit.jpg");
   background-position: center;
   background-size: 100% 100%;
-  transform: rotatey(180deg);
+  -webkit-transform: rotatey(180deg);
+          transform: rotatey(180deg);
 }
 
 .score {
@@ -124,10 +143,19 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .message {
@@ -136,11 +164,21 @@ body {
   height: 220px;
   border-radius: 10px;
   background-color: #0f5563;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   font-size: 2.5rem;
   background-color: #564aa5;
   border: 2px solid #2d2d2d;
@@ -167,11 +205,13 @@ body {
   color: white;
   margin-top: -10px;
   font-weight: 500;
+  -webkit-transition: 0.1s ease-in-out;
   transition: 0.1s ease-in-out;
 }
 
 .message button:hover {
-  transform: scale(1.02);
+  -webkit-transform: scale(1.02);
+          transform: scale(1.02);
   font-size: 1.51rem;
 }
 
@@ -179,17 +219,22 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  backdrop-filter: blur(7px) grayscale(0.1);
+  -webkit-backdrop-filter: blur(7px) grayscale(0.1);
+          backdrop-filter: blur(7px) grayscale(0.1);
+  -webkit-transition: 0.2s ease-in-out;
   transition: 0.2s ease-in-out;
 }
 
 .visible {
-  transform: scale(0);
+  -webkit-transform: scale(0);
+          transform: scale(0);
 }
 
 .message {
-  transform: translateY(-900px) scale(0);
+  -webkit-transform: translateY(-900px) scale(0);
+          transform: translateY(-900px) scale(0);
   opacity: 0;
+  -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
 }
 
@@ -275,7 +320,8 @@ body {
     font-weight: 500;
   }
   button:hover {
-    transform: scale(1.02);
+    -webkit-transform: scale(1.02);
+            transform: scale(1.02);
     font-size: 1.31rem;
   }
 }
